--- a/index.html
+++ b/index.html
@@ -1,58 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="src/styles.css" />
-    <title>My weather application</title>
-  </head>
-  <body>
-    <div class="weather-app">
-      <header>
-        <form id="search-form">
-          <input
-            type="search"
-            placeholder="Enter a city.."
-            required
-            class="search-input"
-            id="search-input"
-          />
-          <input type="submit" value="Search" class="search-button" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Weather Project</title>
+</head>
+<body>
+    <header>
+        <form>
+            <input type="text" placeholder="Enter city..." required/>
+            <input type ="submit" value="Search"/>
         </form>
-      </header>
-      <main>
-        <div class="current-weather">
-          <div>
-            <h1 class="current-city" id="current-city">Paris</h1>
-            <p class="current-details">
-              <span id="current-date"></span>, moderate rain <br />
-              Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+    </header>
+    <main>
+        <div>
+            <h1> Paris</h1>
+            <p>
+                Saturday 22:39, clear sky
+            </br>
+            Humidity: 80%, Wind: 2.57km/h
             </p>
-          </div>
-          <div class="current-temperature">
-            <span class="current-temperature-icon">☀️</span
-            ><span class="current-temperature-value" id="current-temperature"
-              >24</span
-            ><span class="current-temperature-unit">°C</span>
-          </div>
         </div>
-      </main>
-      <footer>
+        <div>
         <p>
-          This project was coded by
-          <a href="https://github.com/finnocino" target="_blank">Rita Bern</a> and is
-          <a href="https://github.com/finnocino/weather-app" target="_blank"> on GitHub</a> and
-          <a href="https://app.netlify.com/sites/regal-treacle-cd8e13/deploys/664fa3d609f13e0008060b27" target="_blank">hosted on Netlify</a>
+        🌥️ 20°C
+        </p>    
+        </div>
+    </main>
+    <footer>
+        <p>
+            This project was coded by <a href="https://github.com/finnocino" target="_blank">Rita Bern</a>, 
+                is open-sourced on <a href="https://github.com/finnocino/weather-project" target="_blank">github</a> 
+                and hosted on <a href="http://https://app.netlify.com/sites/my-weather-page/deploys" target="_blank">Netlify</a>
         </p>
-      </footer>
-    </div>
-  </body>
-  <script src="src/index.js"></script>
+    </footer>
+</body>
 </html>
