--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>
             This project was coded by <a href="https://github.com/finnocino" target="_blank">Rita Bern</a>, 
                 is open-sourced on <a href="https://github.com/finnocino/weather-project" target="_blank">github</a> 
-                and hosted on <a href="http://https://app.netlify.com/sites/my-weather-page/deploys" target="_blank">Netlify</a>
+                and hosted on <a href="https://main--my-weather-page.netlify.app/" target="_blank">Netlify</a>
         </p>
     </footer>
 </body>
