--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="src/index.css">
     <title>Weather Project</title>
 </head>
 <body>
+    <div class="weather-page">
     <header>
         <form>
             <input type="text" placeholder="Enter city..." required/>
@@ -34,5 +39,6 @@
                 and hosted on <a href="https://main--my-weather-page.netlify.app/" target="_blank">Netlify</a>
         </p>
     </footer>
+</div>
 </body>
 </html>
