--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <body>
     <div class="weather-page">
     <header>
-        <form class="search-bar">
-            <input type="text" placeholder="Enter city..." required class="search-input"/>
+        <form class="search-bar" id="search-form">
+            <input type="text" placeholder="Enter city..." required id="new-city" class="search-input"/>
             <input type ="submit" value="Search" class="search-button"/>
         </form>
     </header>
     <main>
         <div class="weather-data">
             <div>
-            <h1 class="weather-city"> Paris</h1>
+            <h1 id="city-name" class="weather-city"> Paris</h1>
             <p class="weather-details">
                 Saturday 22:39, clear sky
             </br>
