Added more weather data

--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
             <div>
             <h1 id="city-name" class="weather-city"> Paris</h1>
             <p class="weather-details">
-                Saturday 22:39, clear sky
+                <span id="time"></span>
+                , <span id="description"></span>
             </br>
-            Humidity: <strong>80%</strong>, Wind: <strong>2.57km/h</strong>
+            Humidity: <strong id="humidity">%</strong>, Wind: <strong id="wind"></strong>
             </p>
            </div>
         <div class="current-temperature">
             <div class="icon">🌥️ </div>
-            <div class="temperature-value">20</div>
+            <div class="temperature-value" id="temperature">20</div>
             <div class="temperature-unit">°C</div>   
         </div>
     </div>
