--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
             <div>
             <h1 id="city-name" class="weather-city"> Paris</h1>
             <p class="weather-details">
-                <span id="time"></span>
-                , <span id="description"></span>
+                <span id="time"></span>,  
+                <span id="description"></span>
             </br>
-            Humidity: <strong id="humidity">%</strong>, Wind: <strong id="wind"></strong>
+            Humidity: <strong id="humidity"></strong>, Wind: <strong id="wind"></strong>
             </p>
            </div>
         <div class="current-temperature">
-            <div class="icon">🌥️ </div>
-            <div class="temperature-value" id="temperature">20</div>
+            <div id="icon"></div>
+            <div class="temperature-value" id="temperature"></div>
             <div class="temperature-unit">°C</div>   
         </div>
     </div>
