--- a/index.html
+++ b/index.html
@@ -29,13 +29,16 @@
             Humidity: <strong id="humidity"></strong>, Wind: <strong id="wind"></strong>
             </p>
            </div>
-        <div class="current-temperature">
+         <div class="current-temperature-container">
             <div id="icon"></div>
             <div class="temperature-value" id="temperature"></div>
             <div class="temperature-unit">°C</div>   
-        </div>
-    </div>
+         </div>
+       </div>
+       
+       <div class="weather-forecast" id="forecast"></div>
     </main>
+
     <footer>
         <p>
             This project was coded by <a href="https://github.com/finnocino" target="_blank">Rita Bern</a>, 
