updated hosted on link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="temperature-unit">°C</div>   
          </div>
        </div>
-       
+
        <div class="weather-forecast" id="forecast"></div>
     </main>
 
@@ -43,7 +43,7 @@
         <p>
             This project was coded by <a href="https://github.com/finnocino" target="_blank">Rita Bern</a>, 
                 is open-sourced on <a href="https://github.com/finnocino/weather-project" target="_blank">github</a> 
-                and hosted on <a href="https://main--my-weather-page.netlify.app/" target="_blank">Netlify</a>
+                and <a href="https://main--my-weather-page.netlify.app/" target="_blank">hosted on Netlify</a>
         </p>
     </footer>
 </div>
